# rust_rpg

./: Cargo.toml  readme.md
Docs/: vision.md
Snippets/: attempt1.rs  command_loop.rs  tile_algorithm.rs
Writerside2/: in.tree  redirection-rules.xml
Writerside2/topics/: Copilot.md  Detailed-strengths-and-weaknesses-of-rust.md  Mistakes-and-arguments.md  Not-easy-to-learn.md  Rust.md
src/: main.rs
