[package]
name = "rust_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
rand = "0.8.4"
image = "0.25.1"
perlin = "0.1.0"
lazy_static = "1.4.0"
once_cell = "1.8.0"
imageproc = "0.24.0"
noise = "0.9.0"